# agent-workflow-engine-

./: .gitignore  README.md  condition_evaluator.py  engine.py  graph.json  logging_setup.py  main.py  models.py  mypy.ini  nodes.py  pyproject.toml  requirements.txt  run_graph.json  storage.py  storage_sqlite.py  tools.py
scripts/: demo.sh  setup.sh
tests/: conftest.py  test_condition_evaluator.py  test_engine.py  test_extract_functions.py
