[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workflow"
version = "0.1.0"
description = "Minimal agent workflow engine with code review example"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest-cov>=4.0.0",
]
[tool.ruff]
line-length = 88
extend-ignore = ["E203"]
exclude = ["runs.db", ".venv", "__pycache__", ".git"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]
